# Experiment

./: .gitignore  ControlPath.py  DataPath.py  ISA.py  Machine.py  README.md  _test.lst  assembler.py  hl.py  implementationPlan.md  pyproject.toml  ruff.toml  translator.py
.github/workflows/: ci.yml
examples/: alg1.alg  alg1.asm  alg1_bruteforce.alg  alg1_bruteforce.asm  alg1_bruteforce.lst  alg1_optimized.asm  alg1_optimized.lst  array_demo.alg  array_demo.asm  array_demo.lst  cat.alg  cat.asm  cat.lst  count.alg  count.asm  count.lst  countdown.txt  double_precision.alg  double_precision.asm  double_precision.lst  fib.alg  fib.asm  fib.lst  function_call.alg  function_call.asm  function_call.lst  hello.alg  hello.asm  hello.lst  hello_user_name.alg  hello_user_name.asm  hello_user_name.lst  prob1_optimized.alg  prob1_optimized.asm  sort.alg  sort.asm  sort.lst  sum.alg  sum.asm  sum.lst  (+10 more)
golden/: alg1_test.yaml  cat_test.yaml  double_precision_test.yaml  function_call_test.yaml  hello_test.yaml  hello_user_name_test.yaml  sort_test.yaml  vector_demo_test.yaml  word_byte_test.yaml
golden/alg1/: test.yaml
golden/cat/: program.lst  (+2 more)
programs/: euler4_brute.bin.lst  euler4_brute.txt  euler4_opt.bin.lst  euler4_opt.txt  prob1.bin.lst  prob1_euler4.asm  prob1_euler4.txt
src/: ControlPath.py  DataPath.py  ISA.py  Machine.py  assembler.py  ast_nodes.py  cli.py  control_path.py  control_unit.py  data_path.py  hl.py  hl_logic.py  isa.py  machine.py  translator.py
tests/: countdown.lst  hello.asm  pstr.lst  sum.lst  test_all.py  test_asm.py  test_ast.py  test_golden.py
(+21 files in other folders)
